{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 285,
  "lineage": "589429a4-3305-4445-dbfa-6c473a52d5cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Kubernetes_Servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02efe31f21526284a",
            "arn": "arn:aws:ec2:us-west-2:411854276167:instance/i-08c9fac3c33de85c1",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08c9fac3c33de85c1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Automationkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bc9760f4eefbb0a8",
            "private_dns": "ip-172-0-0-107.us-west-2.compute.internal",
            "private_ip": "172.0.0.107",
            "public_ip": "34.215.0.173",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c1efd2bc5629e277",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002b187cb0361229d",
            "tags": {
              "Name": "Kubernetes_Servers",
              "Type": "Kubernetes_Master"
            },
            "tags_all": {
              "Name": "Kubernetes_Servers",
              "Type": "Kubernetes_Master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05bcd9fe877f8b5e0"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes_sg",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Kubernetes_Workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02efe31f21526284a",
            "arn": "arn:aws:ec2:us-west-2:411854276167:instance/i-06e7551ebc2bec100",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06e7551ebc2bec100",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Automationkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01f427fbc00148c68",
            "private_dns": "ip-172-0-0-18.us-west-2.compute.internal",
            "private_ip": "172.0.0.18",
            "public_ip": "34.220.105.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b207a7c3847066fc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002b187cb0361229d",
            "tags": {
              "Name": "Kubernetes_Servers",
              "Type": "Kubernetes_Worker"
            },
            "tags_all": {
              "Name": "Kubernetes_Servers",
              "Type": "Kubernetes_Worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05bcd9fe877f8b5e0"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes_sg",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02efe31f21526284a",
            "arn": "arn:aws:ec2:us-west-2:411854276167:instance/i-0fd31587081e1ac1a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd31587081e1ac1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Automationkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fbe4adc763c01922",
            "private_dns": "ip-172-0-0-151.us-west-2.compute.internal",
            "private_ip": "172.0.0.151",
            "public_ip": "35.167.24.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-097bb8a0ff837a790",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be9439f6e7d748ef",
            "tags": {
              "Name": "Kubernetes_Servers",
              "Type": "Kubernetes_Worker"
            },
            "tags_all": {
              "Name": "Kubernetes_Servers",
              "Type": "Kubernetes_Worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05bcd9fe877f8b5e0"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes_sg",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-086d8b62958af8558",
            "arn": "arn:aws:ec2:us-west-2:411854276167:instance/i-040e3928e2374410d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-040e3928e2374410d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Automationkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08bbf19ea0c2418f8",
            "private_dns": "ip-172-0-0-73.us-west-2.compute.internal",
            "private_ip": "172.0.0.73",
            "public_ip": "54.149.70.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06eefe5ba85120a04",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002b187cb0361229d",
            "tags": {
              "Name": "jenkins_server",
              "Type": "jenkins_worker"
            },
            "tags_all": {
              "Name": "jenkins_server",
              "Type": "jenkins_worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05bcd9fe877f8b5e0"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes_sg",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nexus_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-086d8b62958af8558",
            "arn": "arn:aws:ec2:us-west-2:411854276167:instance/i-0838c22df5e4b0aac",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0838c22df5e4b0aac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Automationkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0280ebf8024989b44",
            "private_dns": "ip-172-0-0-26.us-west-2.compute.internal",
            "private_ip": "172.0.0.26",
            "public_ip": "54.148.64.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fa57aeca48a49dc9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002b187cb0361229d",
            "tags": {
              "Name": "Nexus_server",
              "Type": "nexus_worker"
            },
            "tags_all": {
              "Name": "Nexus_server",
              "Type": "nexus_worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05bcd9fe877f8b5e0"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes_sg",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prometheus_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-086d8b62958af8558",
            "arn": "arn:aws:ec2:us-west-2:411854276167:instance/i-073aa175535b8c3d1",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-073aa175535b8c3d1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Automationkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08e2588c707a2e395",
            "private_dns": "ip-172-0-0-46.us-west-2.compute.internal",
            "private_ip": "172.0.0.46",
            "public_ip": "54.187.141.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06c84ed5dfe4a3a23",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002b187cb0361229d",
            "tags": {
              "Name": "Prometheus_server",
              "Type": "prometheus_worker"
            },
            "tags_all": {
              "Name": "Prometheus_server",
              "Type": "prometheus_worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05bcd9fe877f8b5e0"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes_sg",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarQube_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-086d8b62958af8558",
            "arn": "arn:aws:ec2:us-west-2:411854276167:instance/i-0292ebaa3544dd111",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0292ebaa3544dd111",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "Automationkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04f87a470b158b91c",
            "private_dns": "ip-172-0-0-88.us-west-2.compute.internal",
            "private_ip": "172.0.0.88",
            "public_ip": "54.244.198.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0685d86c474f5eede",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002b187cb0361229d",
            "tags": {
              "Name": "SonarQube_server",
              "Type": "sonarQube_worker"
            },
            "tags_all": {
              "Name": "SonarQube_server",
              "Type": "sonarQube_worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05bcd9fe877f8b5e0"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes_sg",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tomcat_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-086d8b62958af8558",
            "arn": "arn:aws:ec2:us-west-2:411854276167:instance/i-0ad8e6e3b1313dec0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad8e6e3b1313dec0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Automationkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c383ff7150d4aa1e",
            "private_dns": "ip-172-0-0-16.us-west-2.compute.internal",
            "private_ip": "172.0.0.16",
            "public_ip": "34.218.233.82",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b6d86486634d5b35",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-002b187cb0361229d",
            "tags": {
              "Name": "Tomcat_server",
              "Type": "tomcat_worker"
            },
            "tags_all": {
              "Name": "Tomcat_server",
              "Type": "tomcat_worker"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05bcd9fe877f8b5e0"
            ]
          },
          "dependencies": [
            "aws_security_group.kubernetes_sg",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kubernetes_vpc_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411854276167:internet-gateway/igw-048d08149a3fd2ecc",
            "id": "igw-048d08149a3fd2ecc",
            "owner_id": "411854276167",
            "tags": {
              "Name": "kubernetes_vpc_igw"
            },
            "tags_all": {
              "Name": "kubernetes_vpc_igw"
            },
            "vpc_id": "vpc-046f024ea45344fbc"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kubernetes_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411854276167:route-table/rtb-035a493c4d89111c8",
            "id": "rtb-035a493c4d89111c8",
            "owner_id": "411854276167",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-048d08149a3fd2ecc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kubernetes_vpc_public_rt"
            },
            "tags_all": {
              "Name": "kubernetes_vpc_public_rt"
            },
            "vpc_id": "vpc-046f024ea45344fbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.kubernetes_vpc_igw",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sub_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f035e71b5879bbc4",
            "route_table_id": "rtb-035a493c4d89111c8",
            "subnet_id": "subnet-002b187cb0361229d"
          },
          "dependencies": [
            "aws_internet_gateway.kubernetes_vpc_igw",
            "aws_route_table.kubernetes_public_rt",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0990132d35c8ad7b1",
            "route_table_id": "rtb-035a493c4d89111c8",
            "subnet_id": "subnet-0be9439f6e7d748ef"
          },
          "dependencies": [
            "aws_internet_gateway.kubernetes_vpc_igw",
            "aws_route_table.kubernetes_public_rt",
            "aws_subnet.kubernetes_subnets",
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kubernetes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411854276167:security-group/sg-05bcd9fe877f8b5e0",
            "description": "Allow All Ports All Protocals",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bcd9fe877f8b5e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Allow_All_Ports",
            "name_prefix": "",
            "owner_id": "411854276167",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-046f024ea45344fbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kubernetes_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411854276167:subnet/subnet-002b187cb0361229d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.0.0.0/25",
            "id": "subnet-002b187cb0361229d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "411854276167",
            "tags": {
              "Name": "kubernetes_subnets_1"
            },
            "tags_all": {
              "Name": "kubernetes_subnets_1"
            },
            "vpc_id": "vpc-046f024ea45344fbc"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411854276167:subnet/subnet-0be9439f6e7d748ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.0.0.128/25",
            "id": "subnet-0be9439f6e7d748ef",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "411854276167",
            "tags": {
              "Name": "kubernetes_subnets_2"
            },
            "tags_all": {
              "Name": "kubernetes_subnets_2"
            },
            "vpc_id": "vpc-046f024ea45344fbc"
          },
          "dependencies": [
            "aws_vpc.kubernetes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:411854276167:vpc/vpc-046f024ea45344fbc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/24",
            "default_network_acl_id": "acl-086318b85475bf80d",
            "default_route_table_id": "rtb-085448466bf363d5b",
            "default_security_group_id": "sg-0d788bcff15a44d25",
            "dhcp_options_id": "dopt-102f7868",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-046f024ea45344fbc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-085448466bf363d5b",
            "owner_id": "411854276167",
            "tags": {
              "Name": "kubernetes"
            },
            "tags_all": {
              "Name": "kubernetes"
            }
          }
        }
      ]
    }
  ]
}